# jasmin-homedir-manager

./: .gitignore  README.md  pyproject.toml
jasmin_homedir_manager/: cli.py  settings.py
jasmin_homedir_manager/commands/: __init__.py  base.py  training_cleanup.py
tests/: test_settings.py  test_training_cleanup.py
tests/fixtures/: api_responses.json  test_settings.toml
