[project]
name = "jasmin-homedir-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex Manning",email = "alexander.manning@stfc.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib (>=1.6.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)",
    "click (>=8.0.0,<9.0.0)"
]

[project.optional-dependencies]
test = []

[project.scripts]
jasmin-homedir-manager = "jasmin_homedir_manager.cli:cli"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
