[project]
name = "jasmin-homedir-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex Manning",email = "alexander.manning@stfc.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "authlib (>=1.6.1,<2.0.0)",
    "httpx (>=0.20.0,<1)",
    "pydantic-settings (>=2.0.0,<3)",
    "click (>=8.0.0,<9)",
]

[project.scripts]
jasmin-homedir-manager = "jasmin_homedir_manager.cli:cli"

[tool.mypy]
python_version = "3.13"
strict = true

[tool.poetry.group.typecheck.dependencies]
mypy = "^1.17.1"
types-authlib = "^1.6.0.20250809"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
